[tool.poetry]
name = "Behave_Playwright_boilerplate"
version = "0.1.0"
description = ""
authors = ["Andrey <baykov.andrey@gmail.com>","Aleksandr <aleksandr.malyi.test@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.3.2"
playwright = "^1.58.0"
behave = "^1.3.3"
requests = "^2.33.1


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
